# LibraryApp

./: .gitignore  Makefile  README.md  example.env  pyproject.toml
config/: settings.py  urls.py
src/core/: admin.py  api_urls.py  endpoints.py  models.py  permissions.py  serializers.py  utils.py  view_urls.py  views.py
src/core/management/commands/: init_script.py
src/core/migrations/: 0001_initial.py  0002_rename_name_author_fullname_alter_book_genres.py  0003_alter_book_options.py  0004_customuserbook.py  0005_alter_customuserbook_user.py  0006_alter_customuserbook_options_and_more.py  0007_historicalbook_historicalcustomuserbook.py  0008_alter_author_options_alter_book_options_and_more.py  0009_delete_historicalbook.py  0010_historicalbook.py  0011_visitordebt_delete_customuserbook.py
src/users/: admin.py  api_urls.py  forms.py  models.py  serializers.py  view_urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_is_librarian_and_more.py  0003_rename_libraryvisitor_visitor_alter_visitor_options_and_more.py  0004_remove_customuser_is_librarian_and_more.py  0005_remove_customuser_email.py  0006_customuser_email_alter_customuser_date_joined.py  0007_alter_customuser_email.py  0008_alter_customuser_options.py  0009_alter_customuser_date_joined.py
static/core/adminlte/plugins/bootstrap/js/: bootstrap.bundle.js
templates/core/: base.html  books.html  debtors.html  my_books.html
templates/core/errors/: 404.html
templates/users/: login.html  register_librarian.html  register_visitor.html
